Add construction pages and update styles for blog
Added placeholder 'WORK IN PROGRESS' pages for About, Login, and Posts sections. Updated CSS with new link styles and a construction image background. Updated README with project info, contributors, and features. Added favicon.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="#" />
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
   </head>
 
   <body>
@@ -47,7 +48,7 @@
       </div>
     </main>
     <footer>
-      <p>&copy; Sergi, Jan y el adoptado. Ningun derecho reservado</p>
+      <p>&copy; Jan, Sergi y el adoptado. Ningun derecho reservado</p>
     </footer>
   </body>
 </html>
